--- a/web/themes/custom/tutorial/components/01-atoms/text/headings/_heading.twig
+++ b/web/themes/custom/tutorial/components/01-atoms/text/headings/_heading.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * Available variables:
- * - heading_level - the header level 1-6 (produces h1, h2, etc.)
+ * - heading__level - the header level 1-6 (produces h1, h2, etc.)
  *
  * - heading__base_class - the base class
  * - heading__modifiers - array of modifiers to add to the base classname
