Added documentation to the custom twig.

--- a/web/themes/custom/tutorial/templates/paragraphs/paragraph--cta--default.html.twig
+++ b/web/themes/custom/tutorial/templates/paragraphs/paragraph--cta--default.html.twig
@@ -8,6 +8,8 @@
  * - description: Description of the paragraph.
  * - button_text: Button text of the paragraph.
  * - button_url: Button url of the paragraph.
+ * - img_src: Image source of the paragraph.
+ * - img_alt: Image alt of the paragraph.
  *
  * @see template_preprocess_paragraph()
  *
